# guardian_ai

./: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  MASTER_CONTEXT.md  README.md  analysis_options.yaml  pubspec.yaml  run.sh  run_android.sh  run_mobile.sh  setup_android.sh  setup_llama.sh
.github/workflows/: android_build.yml  build-apk.yml
android/: CMakeLists.txt
android/app/: build.gradle
android/app/src/main/kotlin/com/example/guardian_ai/: MainActivity.kt
lib/: main.dart
lib/core/constants/: app_colors.dart  app_constants.dart  app_dimensions.dart
lib/core/errors/: app_exceptions.dart  failures.dart
lib/core/extensions/: context_extensions.dart
lib/core/routing/: app_router.dart
lib/core/theme/: app_theme.dart
lib/core/utils/: date_utils.dart  utils.dart
lib/models/: base_entity.dart  drug_database.dart  nanda_database.dart
lib/modules/ai/data/datasources/: ai_local_datasource.dart  prompt_templates.dart
lib/modules/ai/data/models/: ai_model_info_model.dart
lib/modules/ai/data/native/: llama_ffi.dart
lib/modules/ai/data/repositories/: ai_repository_impl.dart
lib/modules/ai/data/services/: llama_service.dart  ollama_service.dart
lib/modules/ai/domain/entities/: ai_model_info.dart  ai_response.dart  clinical_context.dart
lib/modules/ai/domain/repositories/: ai_repository.dart
lib/modules/ai/domain/usecases/: analyze_medication.dart  analyze_vital_signs.dart  generate_clinical_response.dart  generate_clinical_summary.dart  load_ai_model.dart
lib/modules/ai/presentation/pages/: ai_page.dart
lib/modules/ai/presentation/providers/: ai_provider.dart
lib/modules/ai/presentation/widgets/: ai_message_bubble.dart  model_status_indicator.dart  quick_action_chip.dart
lib/modules/auth/data/datasources/: auth_local_datasource.dart
lib/modules/auth/data/models/: auth_status_model.dart
lib/modules/auth/data/repositories/: auth_repository_impl.dart
lib/modules/auth/domain/entities/: pin_code.dart
lib/modules/auth/domain/repositories/: auth_repository.dart
lib/modules/auth/domain/usecases/: authenticate_with_biometrics.dart  authenticate_with_pin.dart  (+2 more)
lib/modules/auth/services/: firebase_auth_service.dart
lib/modules/subscription/: subscription_provider.dart
lib/shared/models/: clinical_notes_model.dart  medication_model.dart  vital_signs_model.dart
lib/shared/utils/: constants.dart  validators.dart
lib/shared/widgets/: clinical_app_bar.dart  clinical_button.dart  clinical_card.dart  clinical_input.dart  empty_state.dart  loading_overlay.dart  section_header.dart  status_badge.dart
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
models/: .gitkeep
native/llama_cpp/: llama_bridge.c  llama_bridge.cpp
test/unit/calculators/: calculate_body_surface_test.dart  calculate_dose_test.dart  calculate_drip_rate_test.dart  calculate_fluid_balance_test.dart  calculate_infusion_test.dart  calculate_vasopressor_test.dart  max_dose_check_test.dart  pediatric_dose_test.dart
test/unit/models/: medication_model_test.dart  vital_signs_model_test.dart
test/unit/shared/: validators_test.dart
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc
(+42 files in other folders)
